<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#000000">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:background="#000000"
        android:weightSum="1"
        android:layout_weight="0.02">

        <TextView
            android:layout_width="199dp"
            android:layout_height="56dp"
            android:text="@string/cb"
            android:background="#000000"
            android:layout_weight="0.62"
            android:visibility="visible"
            android:textSize="18sp"
            android:editable="false"
            android:textColor="#FFFFFF"
            android:typeface="normal"
            android:textStyle="bold" />

        <EditText
            android:layout_width="146dp"
            android:layout_height="59dp"
            android:text=""
            android:layout_gravity="right"
            android:layout_weight="0.47"
            android:visibility="visible"
            android:background="#ffffff" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:background="#000000"
        android:weightSum="1"
        android:layout_weight="0.02">

        <TextView
            android:layout_width="199dp"
            android:layout_height="56dp"
            android:text="@string/ir"
            android:background="#000000"
            android:layout_weight="0.62"
            android:textSize="18sp"
            android:visibility="visible"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <EditText
            android:layout_width="146dp"
            android:layout_height="59dp"
            android:text=""
            android:layout_gravity="right"
            android:layout_weight="0.47"
            android:visibility="visible"
            android:background="#ffffff" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:background="#000000"
        android:weightSum="1"
        android:layout_weight="0.02">

        <TextView
            android:layout_width="199dp"
            android:layout_height="56dp"
            android:text="@string/mp"
            android:background="#000000"
            android:layout_weight="0.62"
            android:textSize="18sp"
            android:visibility="visible"
            android:textColor="#FFFFFF"
            android:textAlignment="textStart"
            android:textStyle="bold" />

        <EditText
            android:layout_width="146dp"
            android:layout_height="59dp"
            android:text=""
            android:layout_gravity="right"
            android:layout_weight="0.47"
            android:visibility="visible"
            android:background="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"></LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:background="#000000"
        android:weightSum="1"
        android:layout_weight="0.02">

        <TextView
            android:layout_width="199dp"
            android:layout_height="56dp"
            android:text="@string/fcb"
            android:background="#000000"
            android:layout_weight="0.62"
            android:textSize="18sp"
            android:visibility="visible"
            android:textColor="#FFFFFF"
            android:textAlignment="textStart"
            android:textStyle="bold" />

        <EditText
            android:layout_width="146dp"
            android:layout_height="59dp"
            android:text=""
            android:layout_gravity="right"
            android:layout_weight="0.47"
            android:visibility="visible"
            android:background="#ffffff" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:background="#000000"
        android:weightSum="1"
        android:layout_weight="0.02">

        <TextView
            android:layout_width="199dp"
            android:layout_height="56dp"
            android:text="@string/mr"
            android:background="#000000"
            android:layout_weight="0.62"
            android:textSize="18sp"
            android:visibility="visible"
            android:textColor="#FFFFFF"
            android:textAlignment="textStart"
            android:textStyle="bold" />

        <EditText
            android:layout_width="146dp"
            android:layout_height="59dp"
            android:text=""
            android:layout_gravity="right"
            android:layout_weight="0.47"
            android:visibility="visible"
            android:background="#ffffff" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:background="#000000"
        android:weightSum="1"
        android:layout_weight="0.02">

        <TextView
            android:layout_width="199dp"
            android:layout_height="56dp"
            android:text="@string/ip"
            android:background="#000000"
            android:layout_weight="0.62"
            android:textSize="18sp"
            android:visibility="visible"
            android:textColor="#FFFFFF"
            android:textAlignment="textStart"
            android:textStyle="bold" />

        <EditText
            android:layout_width="146dp"
            android:layout_height="59dp"
            android:text=""
            android:layout_gravity="right"
            android:layout_weight="0.47"
            android:visibility="visible"
            android:background="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"></LinearLayout>

    <Button
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:text="@string/com"

        android:layout_weight="0.02"
        android:textStyle="bold" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"></LinearLayout>

    <Button
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:text="@string/clr"
        android:id="@+id/button"
        android:layout_weight="0.02"
        android:textStyle="bold" />


</LinearLayout>